force-app/main/default/objects/Menu_Item__c/Menu_Item__c.object-meta.xml
<CustomObject>
    <description>Object to Hold menu Items for Restaurant</description>
    <label>Menu Item</label>
    <nameField>
        <label>Menu Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Menu Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>