force-app/main/default/objects/Menu_Item__c/fields/Difficulty_to_Make__c.field-meta.xml
<CustomField>
    <fullName>Difficulty_to_Make__c</fullName>
    <description>The difficulty to make the menu item. Can only be changed by chefs.</description>
    <inlineHelpText>The difficulty to make the menu item. Can only be changed by chefs.</inlineHelpText>
    <label>Difficulty to Make</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very Simple</fullName>
            </value>
            <value>
                <fullName>Simple</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Difficult</fullName>
            </value>
            <value>
                <fullName>Very Difficult</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>