force-app/main/default/objects/Menu_Item__c/fields/Price_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Price_to_Customer__c</fullName>
    <description>How much one of this item costs the customer.</description>
    <label>Price to Customer</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>