force-app/main/default/objects/Menu_Item__c/fields/Price_to_Make__c.field-meta.xml
<CustomField>
    <fullName>Price_to_Make__c</fullName>
    <description>Price to make the menu item.</description>
    <inlineHelpText>Price to make the menu item.</inlineHelpText>
    <label>Price to Make</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>