force-app/main/default/objects/Menu_Item__c/validationRules/Only_Chefs_can_Change_Difficulty.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Chefs_can_Change_Difficulty</fullName>
    <active>true</active>
    <description>Validates that the current user is a chef, thereby being able to change the difficulty to make field.</description>
    <errorConditionFormula>!$Permission.Chef_Permissions</errorConditionFormula>
    <errorMessage>The current user must be a chef user in order to change this field.</errorMessage>
</ValidationRule>